--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -14,9 +14,8 @@
     <div id="messages"></div>
     <div id="fixtures"></div>
     <script src="./node_modules/mocha/mocha.js"></script>
-    <script src="./node_modules/chai/chai.js"></script>
     <script>mocha.setup('bdd')</script>
-    <script src="./lib/test.js"></script>
+    <script src="./lib/specs.js"></script>
     <script>mocha.run();</script>
 </body>
 
