#000 okan add tests, clean up code and build scripts

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Cow tests</title>
+    <title>redux-ts tests</title>
     <link rel="stylesheet" media="all" href="./node_modules/mocha/mocha.css">
 </head>
 
